--- a/src/DocumentTranslator/DocumentTranslator.csproj
+++ b/src/DocumentTranslator/DocumentTranslator.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="XiHan.Framework.Utils" Version="0.5.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="XiHan.Framework.Utils" Version="0.8.15" />
   </ItemGroup>
 
 </Project>
